# regattaData

./: .gitignore  README.md  project_summary.md  pyproject.toml
config/resolution_rules/: club.yml  event.yml  participant.yml  registration.yml  source_trust.yml  yacht.yml
docs/architecture/: cloud-sql-schema-spec.md  implementation-contract.md  target-architecture.md
docs/decisions/: adr-001-platform-gcp.md  adr-002-person-owner-registration-model.md  adr-003-source-systems-and-ingestion.md  adr-004-entity-resolution-and-auto-merge.md
docs/qa/: code-review-standard.md  parallel-claude-acceptance-matrix.md  parallel-claude-qa-runbook.md  pre-merge-gate-checklist.md
docs/requirements/: airtable-copy-ingestion-requirements.md  decisions-log.md  (+25 more)
migrations/: 0001_extensions.sql  0002_core_entities.sql  0003_relationships.sql  0004_event_ops.sql  0005_resolution_and_actions.sql  0006_views.sql  0007_jotform_tables.sql  0008_mailchimp_tables.sql  0009_airtable_copy_tables.sql  0010_yacht_scoring_tables.sql  0011_candidate_canonical_core.sql  0012_canonical_tables.sql  0013_manual_apply_schema.sql  0014_state_machine_constraints.sql  0015_provenance_nba_lifecycle.sql  0016_lineage_coverage.sql  0017_index_additions.sql  0018_bhyc_member_directory_tables.sql  0019_mailchimp_activation_tables.sql  0020_mailchimp_identity_policy_tables.sql  0021_rocketreach_enrichment_tables.sql  0022_hold_pool_geo_prepare.sql
scripts/: dev_db_check.sh  dev_start_proxy.sh  qa_capture_snapshot.sh  qa_parallel_smoke.sh  qa_secret_scan.sh  qa_summarize_reports.sh
supabase/: config.toml
(+75 files in other folders)
